[package]
name = "capitan-test"
version = "0.1.0"
authors = ["Jose Salazar <znx3p0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
async-trait = "0.1"
capitan-lib = { git = "https://github.com/znx3p0/capitan-lib", rev = "8fd330a8a46ae77ee065d6ecbda7761a65b57e1a" }
anyhow = "1.0"
